<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_remember"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="2dp">

            <ImageView
                android:id="@+id/iv_remember"
                android:layout_width="25dp"
                android:layout_height="23dp"
                android:src="@drawable/remember" />

            <TextView
                android:id="@+id/tv_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intent_music"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_paln"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="2dp">

            <ImageView
                android:id="@+id/iv_plan"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/plan" />

            <TextView
                android:id="@+id/tv_plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local_music"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_my"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="2dp">

            <ImageView
                android:id="@+id/iv_my"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/my" />

            <TextView
                android:id="@+id/tv_my"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intent_video"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="2dp">

            <ImageView
                android:id="@+id/iv_list"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/list" />

            <TextView
                android:id="@+id/tv_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local_video"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
