<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424242"
    tools:context="com.example.lancer.MovieMusic.Activity.LocalMusicActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_localmusic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/tv_localmusic_singname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_localmusic_back"
            android:padding="3dp"
            android:singleLine="true"
            android:text="@string/singname"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_localmusic_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_localmusic_singname"
            android:layout_toRightOf="@id/iv_localmusic_back"
            android:padding="3dp"
            android:singleLine="true"
            android:text="@string/singer"

            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>

    <!--<FrameLayout
        android:id="@+id/fl"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true">-->

        <ImageView
            android:id="@+id/iv_localmusic_album"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/user" />

        <com.example.lancer.MovieMusic.weight.LycView
            android:id="@+id/lycView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            android:visibility="gone" />
   <!-- </FrameLayout>-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll"
        android:layout_marginTop="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/tv_current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@android:color/white"
            android:textSize="10sp" />

        <SeekBar
            android:id="@+id/seekbar_localmusic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:maxHeight="2dp"
            android:minHeight="2dp" />

        <TextView
            android:id="@+id/tv_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@android:color/white"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="3dp">

        <ImageView
            android:id="@+id/iv_localmusic_mode"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/play_mode_cycle_pressed" />

        <ImageView
            android:id="@+id/iv_localmusic_pre"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/play_btn_prev_pressed" />

        <ImageView
            android:id="@+id/iv_localmusic_play"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/play_btn_play_pressed" />

        <ImageView
            android:id="@+id/iv_localmusic_next"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/play_btn_play_next" />

        <ImageView
            android:id="@+id/iv_localmusic_menu"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:src="@drawable/menu" />
    </LinearLayout>


</RelativeLayout>
